# ProgettoDiLaboratorioDiprogrammzione

./: CMakeLists.txt
lib/googletest/src/: gtest-port.cc
src/: CMakeLists.txt  ConcreteObserver.cpp  ConcreteObserver.h  ConcreteSubject.cpp  ConcreteSubject.h  FavouriteFolders.cpp  FavouriteFolders.h  Folder.cpp  Folder.h  Folders.cpp  Folders.h  Note.cpp  Note.h  Observer.h  README.md  Subject.h  main.cpp
tst/: CMakeLists.txt  FavouriteFoldersFixture.cpp  FavouriteFoldersFixture.h  FavouriteFoldersTest.cpp  FavoutireFoldersFixture.cpp  FavoutireFoldersFixture.h  FolderFixture.cpp  FolderFixture.h  FolderTest.cpp  FoldersFixture.cpp  FoldersFixture.h  FoldersTest.cpp  NoteFixture.cpp  NoteFixture.h  NoteTest.cpp  tst_main.cpp
